# vega-practice

./: .env.example  .gitignore  1.json  README.md  docker-compose.yaml  dockerfile  excel.md  index.html  pyproject.toml  requirements.txt  start_app.py
alembic/: env.py
alembic/versions/: 04a0045f5990_update_files.py  30ea6ed3e978_add_visible_flag.py  4e9049e19c22_add_new_models.py  8cb60ef46552_initial.py  9c764ab96ad8_.py  b312784c1681_update_data.py  d8826007fd2b_update_scrasp7.py  e8784ea75fc2_add_new_models.py
core/: main.py
core/api/: __init__.py  sso.py
core/api/router/: view.py
core/api/router/api/: depends.py  file_routes.py  schedule_routes.py
core/api/router/excel/: depends.py  view.py
core/api/router/files/: depends.py  view.py
core/api/router/schedule/: depends.py  view.py
core/db/: base_class.py  session.py
core/db/models/: __init__.py  schedule_files.py  schedule_models.py
core/repositories/: base_repository.py  file_repository.py  schedule_repository.py
core/schemas/: api_requests.py  api_responses.py  base.py  schedule.py
core/services/: content_converter.py  conveter.py  excel.py  file_manager.py  ics.py  schedule_compare.py  schedule_downloader.py  schedule_processor.py  schedule_service.py
core/services/converters/: __init__.py  base_converter.py  content_converter.py  excel_converter.py  ics_converter.py
core/settings/: app_config.py
core/utils/: date_utils.py  db_utils.py  maps.py  parsing_utils.py
deploy/: dockerfile
static/css/: common.css  pages.css
static/js/: index-compare.js  index.js  schedule-modals.js  schedule-utils.js  schedule.js
templates/: index.html  schedule.html
